--- a/drafts/02/data_dir/epub.css
+++ b/drafts/02/data_dir/epub.css
@@ -24,24 +24,45 @@ font-family: 'IM FELL English PRO', serif;
 text-align: justify;
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2 {
 font-family: 'Paytone One', sans-serif;
 text-align: center;
 }
 
+h3 {
+    font-family: 'Paytone One', sans-serif;
+    page-break-before: always;
+}
+
+
+h4, h5 {
+font-family: 'Paytone One', sans-serif;
+}
+
 blockquote {
-margin-top: -15px;
-margin-bottom: -15px;
+
 font-style: italic;
 }
 
-hr {
-    border: 0;
-    /*height: 1px;*/
-    background-image: ../images/section_break.png; 
+.author {
+    page-break-before: avoid;
+    page-break-after: avoid;
 }
 
 .center 
 {
     text-align:center;
 }
+
+.right {
+text-align: right;
+}
+
+
+.footnotes {
+page-break-before:always;
+}
+
+img[alt=line-break] { 
+    margin-left: 35%;
+    width: 30%; }
